@@ -21,6 +21,8 @@ cdebconf (0.76) UNRELEASED; urgency=low
     - Fix some of the build issues with the corba frontend, although it
       still doesn't even remotely build or work.
     - Fix compiler warning in slang frontend.
+    - Allocate choices, choices_translated, defaults, and selected
+      dynamically in slang frontend, fixing a crash bug.
   * Matthias Urlichs:
     - Clarify ANS: lines in test.config output.
     - Set _cmdline::frontend rather than frontend::default::driver in
